--- a/style.css
+++ b/style.css
@@ -203,6 +203,34 @@ a:hover {
     display: none;
     padding: 0 2em;
 }
+.achievedVideoContainer{
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    height: 0;
+    width: 100%;
+
+    overflow: hidden;
+
+    opacity: 0;
+
+    transition: height 0ms 500ms, opacity 1s 0ms;
+}
+.achievedVideoContainer.active{
+    height: 100%;
+    opacity: 1;
+    transition: height 0ms 0ms, opacity 1s 0ms;
+}
+.videoAchieved{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 @media (max-width: 600px) {
     .achieved{
         font-size: 1.5em;
