--- a/style.css
+++ b/style.css
@@ -231,6 +231,7 @@ a:hover {
     height: 100%;
     opacity: 1;
     transition: height 0ms 0ms, opacity 1s 0ms;
+    background-color: #000;
 }
 .videoAchieved{
     position: absolute;
@@ -239,7 +240,7 @@ a:hover {
     transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 @media (max-width: 600px) {
     .achieved{
